--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,14 @@
   width: 100%;
   margin-bottom: 10px;
 }
+
+.content-logo {
+  height: 80%;
+}
+
+.logo {
+  height: 100%;
+}
 /* /header */
 
 /* main */
