--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,6 @@ body {
 
 /* header */
 .intestazione {
-  background-color: pink;
   height: 60px;
   width: 100%;
   margin-bottom: 10px;
@@ -38,12 +37,28 @@ body {
 }
 
 nav {
+  margin-top: 1%;
+  margin-bottom: 1%;
   height: 20%;
+}
+
+nav li {
+  font-size: 50%;
+  color: #858585;
+  list-style-type: none;
+  float: left;
+  padding: 1%;
+}
+
+li a {
+  text-decoration: none;
+  color: #858585;
 }
 /* /header */
 
 /* main */
 section.banner {
+  margin-top: 20px;
   background-color: yellow;
   width: 100%;
   height: 180px;
