--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,23 @@
 body {
   font-family: "Montserrat", sans-serif;
 }
+
 .clearfix::after {
   content: "";
   display: block;
   clear: both;
 }
+
+.overlay {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.3);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 10;
+}
+
 .container {
   margin: auto;
   width: 60%;
@@ -58,12 +70,26 @@ li a {
 
 /* main */
 section.banner {
+  position: relative;
   margin-top: 20px;
-  background-color: yellow;
+  background-image: url(../img/banner.jpg);
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
   width: 100%;
-  height: 180px;
+  height: 380px;
   margin-bottom: 10px;
 }
+
+.banner-titolo {
+  font-family: "Montserrat", sans-serif;
+  width: 50%;
+  position: absolute;
+  left: 5%;
+  bottom: 18%;
+  color: white;
+}
+
 
 section.corpo {
   background-color: blue;
