--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,9 @@ li a {
 /* /header */
 
 /* main */
+h4 {
+  margin: 10px 0;
+}
 /* banner */
 section.banner {
   position: relative;
@@ -131,14 +134,18 @@ div.colonne {
   height: 30%;
 }
 
-.col-1 h4 {
-  padding: 4% 0;
-
-}
-
 div.colonne.central {
   width: 50%;
   margin: 0 1%;
+}
+
+.central .banner-2 {
+  position: relative;
+  background-image: url(../img/banner-2.jpg);
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 30%;
 }
 /* /corpo */
 
