--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body {
 
 /* header */
 .intestazione {
-  height: 60px;
+  height: 100px;
   width: 100%;
   margin-bottom: 10px;
 }
@@ -46,7 +46,11 @@ body {
 }
 
 .logo {
-  height: 100%;
+  height: 80%;
+  border-right: 1px solid;
+  border-color: rgba(85, 85, 85, 0.3);
+  padding-right: 20px;
+  color: #858585;
 }
 
 nav {
@@ -79,7 +83,7 @@ p {
 /* banner */
 section.banner {
   position: relative;
-  margin-top: 20px;
+  margin-top: 40px;
   background-image: url(../img/banner.jpg);
   background-position: center;
   background-size: cover;
